--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -5,3 +5,13 @@ services:
     restart: unless-stopped
     env_file:
       - .env.dev
+
+  web:
+    build: .
+    container_name: moex-web-dev
+    restart: unless-stopped
+    env_file:
+      - .env.dev
+    command: uvicorn src.web.app:app --host 0.0.0.0 --port 8000
+    ports:
+      - "8000:8000"
