--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
   "openpyxl>=3.1.2",
   "python-dotenv>=1.0.1",
   "matplotlib>=3.8.0",
+  "fastapi>=0.115.0",
+  "uvicorn>=0.30.0",
 ]
 
 [tool.setuptools]
